create separate router class and few optimizations

--- a/Server/public/index.html
+++ b/Server/public/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="public/main.css">
 </head>
 <body>
     <div class="inhabitants-text">
@@ -15,5 +15,5 @@
         <div class="buldozer-button btn">Create buldozer</div>
     </div>
 </body>
-<script src="index.js"></script>
+<script src="public/index.js"></script>
 </html>
