create simulations on backend and frontend

--- a/src/Server/public/index.html
+++ b/src/Server/public/index.html
@@ -6,14 +6,24 @@
     <link rel="stylesheet" href="public/main.css">
 </head>
 <body>
-<div class="inhabitants-text">
+<div class="container">
+    <div class="map"></div>
+    <div class="info">
+        <span class="info-name">cats -</span><span class="cats-count count">0</span>
+        <span class="info-name">dogs -</span><span class="dogs-count count">0</span>
+        <span class="info-name">buldozers -</span><span class="buldozers-count count">0</span>
+    </div>
+</div>
+<div class="cards-container">
+    <div class="cats-container  inhabit-container">
+    </div>
+    <div class="dogs-container  inhabit-container">
+    </div>
+    <div class="buldozers-container  inhabit-container">
+    </div>
+</div>
 
-</div>
-<div class="inhabitants-buttons">
-    <div class="dog-button btn">Create dog</div>
-    <div class="cat-button btn">Create cat</div>
-    <div class="buldozer-button btn">Create buldozer</div>
-</div>
+
 </body>
 <script src="public/index.js"></script>
 </html>
