--- a/src/Server/public/index.html
+++ b/src/Server/public/index.html
@@ -6,8 +6,9 @@
     <link rel="stylesheet" href="public/main.css">
 </head>
 <body>
+<canvas id="map-canvas"></canvas>
 <div class="container">
-    <div class="map"></div>
+<!--    <div class="map"></div>-->
     <div class="info">
         <span class="info-name">cats -</span><span class="cats-count count">0</span>
         <span class="info-name">dogs -</span><span class="dogs-count count">0</span>
